--- a/retype.yml
+++ b/retype.yml
@@ -1,4 +1,4 @@
-url: cookbook.flottflyt.com/
+url: https://www.przepisy.pl/
 edit:
   repo: github.com/luckypunch38/simple-recipes-cookbook/edit
   base: /src
